generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  USER
  ADMIN

  @@map("user_role")
}

enum UserPlan {
  FREE
  PREMIUM

  @@map("user_plan")
}

enum AuthProvider {
  GOOGLE

  @@map("auth_provider")
}

enum FriendshipStatus {
  PENDING
  ACCEPTED
  REJECTED
  BLOCKED

  @@map("friendship_status")
}

enum VerificationStatus {
  PENDING
  VERIFIED
  EXPIRED
  CANCELLED

  @@map("verification_status")
}

enum UserGender {
  MALE
  FEMALE
  OTHER

  @@map("user_gender")
}

model User {
  id        String   @id @default(uuid()) @db.Uuid
  email     String   @unique @db.VarChar(255)
  phone     String?  @unique @db.VarChar(20)
  fullName  String   @map("full_name") @db.VarChar(100)
  avatarUrl String?  @map("avatar_url")
  coverUrl  String?  @map("cover_url")
  bio       String?  @db.VarChar(280)
  gender    UserGender?
  dateOfBirth DateTime? @map("date_of_birth") @db.Date
  role      UserRole @default(USER)
  plan      UserPlan @default(FREE)
  isActive  Boolean  @default(true) @map("is_active")
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  identities       AuthIdentity[]
  localCredential  LocalCredential?
  verificationSessions EmailVerificationSession[]
  sentRequests     Friendship[] @relation("FriendshipRequester")
  receivedRequests Friendship[] @relation("FriendshipAddressee")

  @@index([phone], map: "idx_users_phone")
  @@index([role], map: "idx_users_role")
  @@map("users")
}

model EmailVerificationSession {
  id                String             @id @default(uuid()) @db.Uuid
  email             String             @db.VarChar(255)
  fullName          String             @map("full_name") @db.VarChar(100)
  phone             String?            @db.VarChar(20)
  avatarUrl         String?            @map("avatar_url")
  passwordHash      String             @map("password_hash") @db.VarChar(255)
  otpHash           String             @map("otp_hash") @db.VarChar(255)
  otpExpiresAt      DateTime           @map("otp_expires_at") @db.Timestamptz(6)
  resendAvailableAt DateTime           @map("resend_available_at") @db.Timestamptz(6)
  attemptCount      Int                @default(0) @map("attempt_count")
  status            VerificationStatus @default(PENDING)
  userId            String?            @map("user_id") @db.Uuid
  createdAt         DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime           @updatedAt @map("updated_at") @db.Timestamptz(6)

  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([email], map: "idx_email_verification_sessions_email")
  @@index([status], map: "idx_email_verification_sessions_status")
  @@index([otpExpiresAt], map: "idx_email_verification_sessions_otp_expires_at")
  @@map("email_verification_sessions")
}

model LocalCredential {
  id           String   @id @default(uuid()) @db.Uuid
  userId       String   @unique @map("user_id") @db.Uuid
  passwordHash String   @map("password_hash") @db.VarChar(255)
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("local_credentials")
}

model AuthIdentity {
  id             String       @id @default(uuid()) @db.Uuid
  userId         String       @map("user_id") @db.Uuid
  provider       AuthProvider
  providerUserId String       @map("provider_user_id") @db.VarChar(255)
  createdAt      DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt      DateTime     @updatedAt @map("updated_at") @db.Timestamptz(6)
  lastLoginAt    DateTime?    @map("last_login_at") @db.Timestamptz(6)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerUserId])
  @@index([userId], map: "idx_auth_identities_user_id")
  @@map("auth_identities")
}

model Friendship {
  id          String           @id @default(uuid()) @db.Uuid
  requesterId String           @map("requester_id") @db.Uuid
  addresseeId String           @map("addressee_id") @db.Uuid
  status      FriendshipStatus @default(PENDING)
  message     String?          @db.VarChar(150)
  createdAt   DateTime         @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime         @updatedAt @map("updated_at") @db.Timestamptz(6)
  respondedAt DateTime?        @map("responded_at") @db.Timestamptz(6)

  requester User @relation("FriendshipRequester", fields: [requesterId], references: [id], onDelete: Cascade)
  addressee User @relation("FriendshipAddressee", fields: [addresseeId], references: [id], onDelete: Cascade)

  @@unique([requesterId, addresseeId])
  @@index([addresseeId, status], map: "idx_friendships_addressee_status")
  @@index([requesterId, status], map: "idx_friendships_requester_status")
  @@map("friendships")
}
